fixed langauage change and dark mode buttons when in greek mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ body{
     text-align: center;
     width: 100%;
     height: fit-content;
-    z-index: 5;
+    z-index: 4;
     position: sticky;
     top: 0;
 }
@@ -73,10 +73,10 @@ a:link{
     position: fixed;
     display: block;
     left:97.5%;
-    margin-top:9.4vw;
+    margin-top: 11vw;
     height:2.5vw;
     aspect-ratio: 1;
-    z-index: 4;
+    z-index: 5;
     opacity:0.5;
 }
 #en {
@@ -86,10 +86,10 @@ a:link{
     position: fixed;
     display: block;
     left:97.5%;
-    margin-top: 6.5vw;
+    margin-top: 8vw;
     height:2.5vw;
     aspect-ratio: 1;
-    z-index: 4;
+    z-index: 5;
     opacity:0.5;
 }
 #gr:hover {
@@ -108,10 +108,10 @@ a:link{
     position: fixed;
     display: block;
     left:97.5%;
-    margin-top: 3.6vw;
+    margin-top: 5vw;
     height:2.5vw;
     aspect-ratio: 1;
-    z-index: 4;
+    z-index: 5;
     opacity:0.5;
 }
 body {
